Update Asterism.java